Downloads/DevOps-Interview-Questions-master/DevOps-Interview-Questions-master/10. Kubernetes/K8s_Notes/4. Networking/Network Policies/allow-frontend-backendpods-port80.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-backend
  namespace: app
spec:
  podSelector:
    matchLabels:
      role: backend
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: frontend
    ports:
    - protocol: TCP
      port: 80



# Applies to pods labeled role: backend in app namespace.
# Only allows incoming traffic from pods labeled role: frontend.
# Only on TCP port 80.
